Fix follower count alignment when not logged in

--- a/resources/assets/less/bem/profile-header-extra.less
+++ b/resources/assets/less/bem/profile-header-extra.less
@@ -45,7 +45,7 @@
   &__follower-count {
     padding-left: 10px;
 
-    &--own {
+    &--no-button {
       padding-left: 0px;
     }
   }
